tests/wsf/fail/juxtaposed_arith_positive.wsa
+1+ +2- +3* +4/ +5%
+97+ +98- +99* +100/ +101%
+170+ +187- +204* +221/ +238%
+2+ +3- +4* +5/ +6%
exit
